--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"@types/redis": "*",
 		"load-json-file": "*",
 		"mocha": "*",
-		"ts-mocha": "^6.0.0",
+		"ts-mocha": "*",
 		"typescript": "*"
 	}
 }
